# smrze

./: .gitignore  Cargo.toml  build.rs  justfile
apple-foundation-models/: Package.resolved  Package.swift
apple-foundation-models/Sources/SmrzeFoundationModels/: App.swift  GemmaGenerator.swift  GemmaModel.swift  HubClient+Downloader.swift  Models.swift  Summarizer.swift  TokenizerBridge.swift  bridging-header.h
apple-foundation-models/Tests/SmrzeFoundationModelsTests/: SummarizerTests.swift
smrze-build-support/: Cargo.toml
smrze-build-support/src/: command.rs  error.rs  hash.rs  lib.rs  mlx.rs  paths.rs  search.rs
src/: app.rs  audio.rs  cache.rs  cli.rs  console.rs  foundation_models.rs  foundation_models_bridge.rs  gemma_models.rs  input.rs  lib.rs  main.rs  mlx_runtime.rs  models.rs  output.rs  paths.rs  speakers.rs  summary.rs  summary_backend.rs  transcript.rs  utils.rs  workers.rs
src/app/: pipeline.rs  summary.rs  transcription.rs
src/app/summary/: generator.rs  input.rs
src/app/transcription/: audio.rs  pipeline.rs
src/audio/: decode.rs  resample.rs
src/cache/: access.rs  audio.rs  summary.rs  support.rs  sweeper.rs  transcript.rs
src/input/: download.rs  local.rs  remote.rs
src/speakers/: raw_turn.rs  segments.rs  smoothing.rs
src/summary/: apple.rs  gemma.rs  prompt.rs
src/workers/: diarization.rs  runner.rs  transcription.rs
xtask/: Cargo.toml
xtask/src/: main.rs
