[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "smrze"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
colored = "3.0"
duct = "1.1.1"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scriptrs = { path = "../scriptrs", features = ["long-form"] }
shellexpand = "3.1"
speakrs = { path = "../speakrs", features = ["coreml"] }
symphonia = { version = "0.5", features = ["all"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[dev-dependencies]
ndarray = "0.17.2"
