[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "smrze"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anstyle = "1.0.1"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
colored = "3.0"
duct = "1.1.1"
gemma4-coreml = { path = "../gemma4-coreml/crates/gemma4-coreml" }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scriptrs = { git = "https://github.com/avencera/scriptrs.git", rev = "0bf7f26e685b3b8a990512d7d34630c0cf67c1dd", features = ["long-form"] }
shellexpand = "3.1"
speakrs = { path = "../speakrs", features = ["coreml"] }
symphonia = { version = "0.5", features = ["all"] }
swift-bridge = "0.1.59"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[dev-dependencies]
ndarray = "0.17.2"

[build-dependencies]
swift-bridge-build = "0.1.59"
